# any-dns

./: .gitignore  .goreleaser.yaml  .goreleaser_hook.sh  CNAME  Cargo.toml  LICENSE-MIT  README.md  _config.yaml  artifacts.sh
.github/workflows/: release.yaml
src/: args.rs  async_custom_handler.rs  async_dns_socket.rs  async_server.rs  cli_options.rs  custom_handler.rs  dns_socket.rs  dns_thread.rs  dns_thread_async.rs  dqy_supported_types.txt  dqy_usage_examples.txt  lib.rs  main.rs  pending_queries.rs  pending_request.rs  protocol.rs  query_id_manager.rs  server.rs  show.rs
