[package]
name = "any-dns"
version = "0.2.4"
edition = "2021"
license = "MIT"
keywords = ["dns"]
description = "Lightweight DNS server with Middleware support for non-ICANN domains."
repository = "https://github.com/severinalexb/any-dns/"
readme = "README.md"

exclude = [
    "main.rs",
]

[dependencies]
async-trait = "0.1.77"
dyn-clone = "1.0.16"
simple-dns = "0.6.0"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }

