[package]
name = "anydnsdqy"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["dns"]
description = "Lightweight DNS server"
repository = ""
readme = "README.md"

exclude = [
    "main.rs",
]

[dependencies]
async-trait = "0.1.77"
dyn-clone = "1.0.16"
simple-dns = { git = "https://github.com/nikescar/simple-dns", branch = "only-simpledns" } # rev = "" tag = "" 
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dnslib = { git = "https://github.com/nikescar/dqy", branch = "main" }
clap = { version = "4.5.26", features = ["cargo"] }
rustc_version_runtime = "0.3.0"
hex = "0.4.3"
service = "0.0.0"
http = "1.0.0"
chrono = "0.4.41"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"

[profile.release-with-symbols]
inherits = "release"
strip = false